# AndroidEngine

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/samthedev/androidengine/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/src/: AndroidEngine.cpp  Asset.cpp  log.cpp
app/src/main/cpp/src/include/: AndroidEngine.h  Asset.h  log.h  mat.h  vec.h
app/src/main/java/com/samthedev/androidengine/: MainActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/samthedev/androidengine/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
